--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Mocha Spec Runner</title>
   <link rel="stylesheet" href="bower_components/mocha/mocha.css">
 </head>
+
 <body>
   <div id="mocha"></div>
   <script src="bower_components/mocha/mocha.js"></script>
-  <script>mocha.setup('')</script>
+  <script>
+    mocha.setup('')
+  </script>
   <script src="bower_components/chai/chai.js"></script>
   <script>
     var assert = chai.assert;
@@ -23,6 +27,9 @@
   <!-- include spec files here... -->
   <script src="spec/utilityBox.js"></script>
 
-  <script>mocha.run()</script>
+  <script>
+    mocha.run()
+  </script>
 </body>
+
 </html>
